<resources>
    <string name="app_name">Smart Money Manager</string>
</resources>
